rca/static_src/sass/components/_search-toggle.scss
.search-toggle {
    $root: &;
    display: none;
    flex-direction: row;
    align-items: center;

    @include media-query(medium) {
        display: flex;
    }

    &__label {
        @include font-size(xxxs);
        margin-left: ($gutter / 2);
    }

    .app__navigation & {
        margin-top: ($grid * 5.75);
        display: flex;

        @include media-query(medium) {
            margin-top: 0;
        }

        .headroom--not-top & {
            margin-top: ($grid * 3.75);
        }
    }

    .header-content-dark & {
        #{$root}__label {
            color: $color--black;
        }

        #{$root}__icon {
            fill: $color--black;
        }
    }

    .header-content-light &,
    .headroom--pinned.headroom--not-top &,
    .app__navigation & {
        #{$root}__label {
            color: $color--white;
        }

        #{$root}__icon {
            fill: $color--white;
        }
    }
}

